# lisp

./: a::b  eval.hpp  lisp.cpp  meson.build  test  util.hpp
src/: eval.cpp  main.cpp  parse.cpp  parse.hpp  result.hpp  token.cpp  token.hpp  value.cpp  value.hpp
tests/: basic.lisp  lambda-env.lisp  macro.lisp  meson.build  quasi-bad1.lisp  quasi-bad2.lisp  quasi.lisp
